refatored: everything in API spec
